Fix button text overspill. Fix sup size.
Changed the calc body size to min-width/height to ensure
no text overspill on descendants.

Changed the appearance of the '**' class button text.

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,8 @@ h1,
 }
 
 .calc-body {
-  height: 80vh;
-  width: 50vw;
+  min-height: 80vh;
+  min-width: 50vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -61,6 +61,11 @@ button {
   display: flex;
   justify-content: space-evenly;
   column-gap: 5%;
+}
+
+sup {
+  font-size: 0.5em;
+  padding-bottom: 0.75em;
 }
 
 .main-numpad {
